# portcast

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
app/: app_logger.py  cache.py  config.py  docs.py  main.py
app/api/: README.md  dictionary.py  fetch.py  routes.py  search.py
app/models/: README.md  paragraph.py
app/repositories/: README.md  paragraph_repository.py
app/schemas/: dictionary.py  search.py
app/services/: README.md  dictionary_service.py  fetch_service.py  search_service.py
app/static/: swagger.json
migrations/: env.py
migrations/versions/: 5704dd71c73b_add_content_hash_column.py
public/: index.html
tests/: README.md  conftest.py  test_dictionary.py  test_fetch.py  test_search.py
